--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">QChef</string>
     <string name="title_activity_main">QChef</string>
-    <string name="package_name">com.theprojectfactory.qchef</string>
-    <string name="custom_url_scheme">com.theprojectfactory.qchef</string>
+    <string name="package_name">com.ent.theprojectfactory.qchef</string>
+    <string name="custom_url_scheme">com.ent.theprojectfactory.qchef</string>
 </resources>
